feat(textselect): make send button full width

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -56,6 +56,6 @@
   </div>
   -->
   <div class="footer">
-    <div class="sendButton" style="width:{{windowWidth-150}}px">SEND</div>
+    <div class="sendButton">SEND</div>
   </div>
 </div>
