--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -57,7 +57,7 @@
   padding-bottom: 80px;
   padding-left: 50px;
   padding-right: 50px;
-  min-height: 200px;
+  min-height: 280px;
   background-color: rgba(255,255,255,0.9);
   border-bottom-left-radius: 5px; 
   border-bottom-right-radius: 5px; 
@@ -101,14 +101,14 @@
   backface-visibility: hidden;
   bottom: 0px;
   width: 100%;
+  padding-left: 8px;
+  padding-right: 8px;
 }
 .textSelect .sendButton {
-  margin: 0 auto;
-  height: 40px;
-  line-height: 40px;
-  margin-bottom: 20px;
+  width: 100%;
+  height: 60px;
+  line-height: 60px;
   color: white;
-  border-radius: 3px;
   font-size: 1.25em;
   background-color: #27ae60;
   text-align: center;
