feat(textselect): tint text on starred

--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -64,6 +64,9 @@
   text-align: center;
   font-size: 1.1em;
 } 
+.textSelect .textStarred {
+  background-color: #ffffdd;
+}
 .textSelect .navButtons {
   position: absolute;
   z-index: 5;
