--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -53,7 +53,7 @@
 .textSelect .text {
   height: 30%;
   color: rgba(0,0,0,0.7); 
-  padding-top: 55px;  
+  padding-top: 65px;  
   padding-bottom: 80px;
   padding-left: 50px;
   padding-right: 50px;
@@ -71,32 +71,32 @@
   position: absolute;
   z-index: 5;
   width: 100%;
-  color: white;
+  color: Black;
+  opacity: 0.3;
   pointer-events: none;
 }
 .textSelect .navButton {
   position: absolute;
   width: 40px;
   height: 40px;
-  border-radius: 20px;
   text-align: center;
   line-height: 40px;
-  font-size: 20px;
+  font-size: 30px;
   pointer-events: visible;
 }
 .textSelect .prevNavButton {
-  background-color: #27ae60;
-  left: 40px;
+  left: 100px;
 }
 .textSelect .nextNavButton {
-  background-color: #27ae60;
-  right: 40px;
+  right: 100px;
 }
 .textSelect .starNavButton {
-  background-color: #e67e22;
+  width: 60px;
+  font-size: 40px;
 }
 .textSelect .unstarNavButton {
-  background-color: #27ae60;
+  width: 60px;
+  font-size: 40px;
 }
 .textSelect .footer {
   position: fixed;
@@ -106,6 +106,11 @@
   width: 100%;
   padding-left: 8px;
   padding-right: 8px;
+}
+.textSelect .textFade {
+  width: 100%;
+  height: 50px;
+  color: blue; 
 }
 .textSelect .sendButton {
   width: 100%;
