--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -4,18 +4,18 @@
     <div 
       ng-if="previousStarredSlideExists()" 
       class="navButton prevNavButton icon ion-arrow-left-b" 
-      style="top:{{slideImageHeight-10}}px"
+      style="top:{{navPosition}}px"
       on-touch="previousStarredSlide()">
     </div>
     <div 
       class="navButton nextNavButton icon ion-arrow-right-b" 
-      style="top:{{slideImageHeight-10}}px"
+      style="top:{{navPosition}}px"
       on-touch="nextSlide()">
     </div>
     <div 
       class="navButton starNavButton icon ion-ios7-star" 
       ng-class="{'starNavButton': getCurrentSlide().starred, 'unstarNavButton': !getCurrentSlide().starred}" 
-      style="top:{{slideImageHeight-10}}px; left:{{windowWidth/2-10}}px"
+      style="top:{{navPosition}}px; left:{{windowWidth/2-30}}px"
       on-touch="toggleSlideStar()">
     </div>
   </div>
@@ -56,6 +56,7 @@
   </div>
   -->
   <div class="footer">
+    <div class="textFade"></div>
     <div class="sendButton">SEND</div>
   </div>
 </div>
