feat(textselect): remove border and background colour (really nice)

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -20,7 +20,7 @@
     </div>
   </div>
   <!-- slides -->
-  <div class="slideContainer" style="width:{{windowWidth*3}}px">
+  <div class="slideContainer" style="width:{{windowWidth}}px">
   <div 
     ng-repeat="slide in slides track by $index" 
     class="slide slideAnimation" 
