--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -8,10 +8,8 @@
   position: relative;
   float: left;
   display: block;
-  padding-left: 8px;
-  padding-right: 8px;
-  padding-top: 8px;
-  padding-bottom: 4px;
+  width:0px;
+  height:0px;
 }
 .slideAnimation {
   animation-duration: 0.3s;
@@ -40,8 +38,6 @@
 }
 .textSelect .image {
   width: 100%;
-  border-top-left-radius: 5px;
-  border-top-right-radius: 5px;
   -webkit-background-size: cover;
   -moz-background-size: cover;
   -o-background-size: cover;
@@ -53,14 +49,12 @@
 .textSelect .text {
   height: 30%;
   color: rgba(0,0,0,0.7); 
-  padding-top: 65px;  
+  padding-top: 75px;  
   padding-bottom: 40px;
   padding-left: 50px;
   padding-right: 50px;
   min-height: 230px;
   background-color: rgba(255,255,255,0.9);
-  border-bottom-left-radius: 5px; 
-  border-bottom-right-radius: 5px; 
   text-align: center;
   font-size: 1.05em;
 } 
@@ -97,13 +91,14 @@
 .textSelect .unstarNavButton {
   width: 60px;
   font-size: 40px;
+  color: yellow;
 }
 .textSelect .sendButton {
   width: 100%;
   height: 50px;
   line-height: 50px;
   color: white;
-  margin-top: 20px;
+  margin-top: 25px;
   font-size: 1.25em;
   background-color: #27ae60;
   text-align: center;
