feat(textselect): styling

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -3,12 +3,12 @@
   <div class="navButtons">
     <div 
       ng-if="previousStarredSlideExists()" 
-      class="navButton prevNavButton icon ion-arrow-left-b" 
+      class="navButton prevNavButton icon ion-ios7-arrow-back" 
       style="top:{{navPosition}}px"
       on-touch="previousStarredSlide()">
     </div>
     <div 
-      class="navButton nextNavButton icon ion-arrow-right-b" 
+      class="navButton nextNavButton icon ion-ios7-arrow-forward" 
       style="top:{{navPosition}}px"
       on-touch="nextSlide()">
     </div>
