--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -49,7 +49,7 @@
 .textSelect .text {
   height: 30%;
   color: rgba(0,0,0,0.7); 
-  padding-top: 75px;  
+  padding-top: 60px;  
   padding-bottom: 40px;
   padding-left: 50px;
   padding-right: 50px;
@@ -65,7 +65,6 @@
   z-index: 5;
   width: 100%;
   color: Black;
-  opacity: 0.3;
   pointer-events: none;
 }
 .textSelect .navButton {
@@ -74,23 +73,24 @@
   height: 40px;
   text-align: center;
   line-height: 40px;
-  font-size: 30px;
+  font-size: 35px;
   pointer-events: visible;
 }
 .textSelect .prevNavButton {
-  left: 100px;
+  opacity: 0.3;
+  left: 0px;
 }
 .textSelect .nextNavButton {
-  right: 100px;
+  opacity: 0.3;
+  right: 0px;
 }
 .textSelect .starNavButton {
+  opacity: 0.3;
   width: 60px;
-  font-size: 40px;
 }
 .textSelect .unstarNavButton {
   width: 60px;
-  font-size: 40px;
-  color: #A69A1E;
+  color: #DBCD6E;
 }
 .textSelect .sendButton {
   width: 100%;
