feat(textselect): move like/dislike buttons

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -2,7 +2,7 @@
   <!-- slides -->
   <div class="slideContainer" style="width:{{windowWidth}}px">
     <!-- decision buttons -->
-    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight+40}}px">
+    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight-45}}px">
       <div 
         class="like icon ion-heart" 
         on-touch="like()">
