feat(textselect): scroll to top on like/dislike button click

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -2,14 +2,14 @@
   <!-- slides -->
   <div class="slideContainer" style="width:{{windowWidth}}px">
     <!-- decision buttons -->
-    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight-45}}px">
+    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight+15}}px">
       <div 
         class="like icon ion-heart" 
-        on-touch="like()">
+        on-touch="likeIconClick()">
       </div>
       <div 
         class="dislike icon ion-heart-broken" 
-        on-touch="dislike()">
+        on-touch="dislikeIconClick()">
       </div>
     </div>
     <!-- slides -->
