--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -26,24 +26,16 @@
         <!-- text -->
         {{slide.text.Content}}
         <!-- send button -->
-        <div class="sendButton">SEND</div>
+        <div class="sendButton" ng-if="!sendBarVisible" ng-click="sendButtonClick()">SEND</div>
+        <!-- send bar -->
+        <div class="sendBar" ng-if="sendBarVisible" style="width:{{windowWidth/2}}px">
+          <div class="sendBarButton sendViaEmail icon ion-email" ng-click="sendViaEmail(slide.text, getCurrentImageUrl())"></div>
+          <div class="sendBarButton sendViaSMS icon ion-ios7-chatboxes" ng-click="sendViaSMS(slide.text, getCurrentImageUrl())"></div>
+          <div class="sendBarButton sendViaFacebook icon ion-social-facebook" ng-click="sendViaFacebook(slide.text, getCurrentImageUrl())"></div>
+        </div>
         <!-- bottom of slide marker -->
         <div class="slideBottom"></div>
       </div>
     </div>
   </div>
-  <!-- send button bar -->
-  <!--
-  <div class="button-bar sendBar">
-    <button class="button sendBarButton sendBarButtonSendViaEmail" ng-click="sendViaEmail(text, getCurrentImageUrl())">
-      <span class="icon ion-email"></span>
-    </button>
-    <button class="button sendBarButton sendBarButtonSendViaSMS" ng-click="sendViaSMS(text, getCurrentImageUrl())">
-      <span class="icon ion-ios7-chatboxes"></span>
-    </button>
-    <button class="button sendBarButton sendBarButtonSendViaFacebook" ng-click="sendViaFacebook(text)">
-      <span class="icon ion-social-facebook"></span>
-    </button>
-  </div>
-  -->
 </div>
