feat(textselect): remove like/dislike buttons for now

--- a/src/app/textselect/textselect.part.html
+++ b/src/app/textselect/textselect.part.html
@@ -2,7 +2,8 @@
   <!-- slides -->
   <div class="slideContainer" style="width:{{windowWidth}}px">
     <!-- decision buttons -->
-    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight+15}}px">
+    <!--
+    <div class="decisionButtons" style="width:{{windowWidth}}px; top:{{slideImageHeight/2}}px">
       <div 
         class="like icon ion-heart" 
         on-touch="likeIconClick()">
@@ -12,6 +13,7 @@
         on-touch="dislikeIconClick()">
       </div>
     </div>
+    -->
     <!-- slides -->
     <div 
       ng-repeat="slide in slides track by $index" 
