--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -54,7 +54,7 @@
 .textSelect .text {
   height: 30%;
   color: rgba(0,0,0,0.7); 
-  padding-top: 45px;  
+  padding-top: 40px;  
   padding-bottom: 40px;
   padding-left: 50px;
   padding-right: 50px;
@@ -69,8 +69,8 @@
   z-index: 1000;
   position: absolute;
   top: 20px;
-  font-size: 30px;
-  color: #2980b9;
+  font-size: 50px;
+  color: white;
   pointer-events: visible;
 }
 .textSelect .decisionButtons .like {
