--- a/src/app/textselect/textselect.css
+++ b/src/app/textselect/textselect.css
@@ -64,6 +64,9 @@
 .textSelect .textStarred {
 }
 .swipeIndicator {
+  pointer-events: none;
+  position: absolute;
+  z-index: 300;
   width: 100%;
 }
 .swipeIndicator .outer {
