feat(modes): mode switch and routing

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,6 +1,4 @@
 <div ng-controller="HomeCtrl">
-  <br>
-  <p>temporary..</p>
   <br><br>
   <div class="list">
     <label class="item item-input">
@@ -12,9 +10,18 @@
       <input type="email" ng-model="email" ng-change="emailChange()">
     </label>
   </div>
-  <a href="#/texts">
-    <button class="button button-light">
-      Ok
+  <br>
+  <br>
+  <a href="#/modea">
+    <button class="button button-balanced" style="width:100%">
+      Run <b>Mode A</b> (6 a day)
+    </button>
+  </a>
+  <br>
+  <br>
+  <a href="#/modeb">
+    <button class="button button-balanced" style="width:100%">
+      Run <b>Mode B</b> (tinder style)
     </button>
   </a>
 </div>
