--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -14,14 +14,14 @@
   <br>
   <a href="#/modea">
     <button class="button button-balanced" style="width:100%">
-      Run <b>Mode A</b> (6 a day)
+      <b>Mode A</b> (6 a day)
     </button>
   </a>
   <br>
   <br>
   <a href="#/modeb">
     <button class="button button-balanced" style="width:100%">
-      Run <b>Mode B</b> (tinder style)
+      <b>Mode B</b> (tinder style)
     </button>
   </a>
 </div>
