feat(modes): remove drag and center handlers from mode a

--- a/src/app/modea/textselect.part.html
+++ b/src/app/modea/textselect.part.html
@@ -5,11 +5,8 @@
     getnextitem="getNextText()"
     devicewidth="deviceWidth"
     deviceheight="deviceHeight"
-    dragleft="dragLeft()"
-    dragright="dragRight()"
     swipeleft="swipeLeft()"
-    swiperight="swipeRight()"
-    center="center()">
+    swiperight="swipeRight()">
     <!-- slide -->
     <gw-mob-slide>
       <!-- image/text slide -->
