feat(modes): come back tomorrow slide in mode a

--- a/src/app/modea/textselect.part.html
+++ b/src/app/modea/textselect.part.html
@@ -16,7 +16,7 @@
         imageheight="slideImageHeight">
       </gw-mob-imagetextslide>
       <!-- send bar -->
-      <div class="sendBarContainer">
+      <div class="sendBarContainer" ng-show="item.TextId!==-1">
         <gw-mob-sendbar 
           emailaddress="emailAddress" 
           mobilenumber="mobileNumber" 
