--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,27 +1,4 @@
-<div ng-controller="HomeCtrl">
+<div ng-controller="HomeCtrl" class="home" style="background-image: url('app/home/home.jpg')">
   <br><br>
-  <div class="list">
-    <label class="item item-input">
-      <span class="input-label">Mums Mobile No</span>
-      <input type="tel" ng-model="mobile" ng-change="mobileChange()">
-    </label>
-    <label class="item item-input">
-      <span class="input-label">Mums Email Address</span>
-      <input type="email" ng-model="email" ng-change="emailChange()">
-    </label>
-  </div>
-  <br>
-  <br>
-  <a href="#/modea">
-    <button class="button button-balanced" style="width:100%">
-      <b>Mode A</b> (6 a day)
-    </button>
-  </a>
-  <br>
-  <br>
-  <a href="#/modeb">
-    <button class="button button-balanced" style="width:100%">
-      <b>Mode B</b> (tinder style)
-    </button>
-  </a>
+  <button ng-click="showDevSettings()">Blee</button>
 </div>
