--- a/src/app/home/home.css
+++ b/src/app/home/home.css
@@ -7,3 +7,13 @@
   background-position: center center;
   background-attachment: fixed fixed; 
 }
+.home .arrow {
+  position: absolute;
+  width: 100%;
+  height: 72px;
+  bottom: 60px;
+  text-align: center;
+}
+.home .arrow img {
+  transform: scale(0.7, 0.7);
+}
