feat(homescreen): add arrow

--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,4 +1,5 @@
 <div ng-controller="HomeCtrl" class="home" style="background-image: url('app/home/home.jpg')">
-  <br><br>
-  <button ng-click="showDevSettings()">Blee</button>
+  <div class="arrow" ng-click="showDevSettings()">
+    <img src="app/home/arrow.png"/>
+  </div>
 </div>
