--- a/src/app/home/devsettings.part.html
+++ b/src/app/home/devsettings.part.html
@@ -1,17 +1,11 @@
-<label>mobile number</label>
-<input type="tel" ng-model="data.mobileNumber">
-<label>email address</label>
-<input type="email" ng-model="data.emailAddress">
-<a href="#/modea">
-  <button class="button button-balanced" style="width:100%">
-    <b>Mode A</b> (6 a day)
-  </button>
-</a>
-<br>
-<br>
-<a href="#/modeb">
-  <button class="button button-balanced" style="width:100%">
-    <b>Mode B</b> (tinder style)
-  </button>
-</a>
+<label style="opacity:0.6">mobile number</label>
+<input type="tel" ng-model="devSettings.mobileNumber">
+<label style="opacity:0.6">email address</label>
+<input type="email" ng-model="devSettings.emailAddress">
+<button class="button button-balanced" style="width:100%; margin-top: 10px" ng-click="modeAClick()">
+  <b>Mode A</b> (6 a day)
+</button>
+<button class="button button-balanced" style="width:100%; margin-top: 10px" ng-click="modeBClick()">
+  <b>Mode B</b> (tinder style)
+</button>
 
