--- a/src/app/instructions/instructions.css
+++ b/src/app/instructions/instructions.css
@@ -1,38 +1,41 @@
-.popupTemp .popup-container {
+.instructionsPopup .popup-container {
   z-index: 200;
   width: 100%;
   height: 100%;
+  padding: 10px;
 }
-.popupTemp .popup-container .popup {
-  width: 90%;
+.instructionsPopup .popup-container .popup {
+  width: 100%;
   height: 100%;
+  max-width: 100%;
+  max-height: 100%;
   background-color: #56abdf;
   border-radius: 10px;
   text-align: center;
 }
-.popupTemp .popup .closeIcon {
+.instructionsPopup .popup .closeIcon {
   float: right;
   color: white;
   margin: 10px;
   font-size: 1.7em;
   font-weight: bold;
 }
-.popupTemp .popup .swipeImage {
+.instructionsPopup .popup .swipeImage {
   clear: both;
   margin-top: 10%;
 }
-.popupTemp .popup .swipeImage img {
+.instructionsPopup .popup .swipeImage img {
   width: 45%;
 }
-.popupTemp .popup .okText {
+.instructionsPopup .popup .okText {
   margin-top: 10%;
 }
-.popupTemp .popup .okText img {
+.instructionsPopup .popup .okText img {
   width: 90%;
 } 
-.popupTemp .popup-head {
+.instructionsPopup .popup-head {
   display: none;
 }
-.popupTemp .popup-buttons {
+.instructionsPopup .popup-buttons {
   display: none;
 }
