--- a/src/app/home/home.part.html
+++ b/src/app/home/home.part.html
@@ -1,5 +1,6 @@
 <div ng-controller="HomeCtrl" class="home" style="background-image: url('app/home/home.jpg')">
-  <div class="arrow" ng-click="showDevSettings()">
+  <div class="settingsIcon icon ion-gear-a" ng-click="settingsClick()"></div>
+  <div class="arrow" ng-click="nextArrowClick()">
     <img src="app/home/arrow.png"/>
   </div>
 </div>
