feat(instructions): tap anywhere to dismiss - closes #80

--- a/src/app/instructions/instructions.part.html
+++ b/src/app/instructions/instructions.part.html
@@ -1,12 +1,12 @@
-<div class="instructions">
-  <div class="closeIcon icon ion-close-round" ng-click="close()"></div>
+<div class="instructions" ng-click="close()">
+  <div class="closeIcon icon ion-close-round"></div>
   <div class="swipeImage">
     <img src="app/instructions/swiperight.png"/>
   </div>
   <div class="swipeImage">
     <img src="app/instructions/swipeleft.png"/>
   </div>
-  <div class="okText" ng-click="close()">
+  <div class="okText">
     <img src="app/instructions/ok.png"/>
   </div>
 </div>
