feat(textselect): refactor slideswipe attributes to match new names in directive

--- a/src/app/modeb/textselect.part.html
+++ b/src/app/modeb/textselect.part.html
@@ -14,11 +14,11 @@
     getnextitem="getNextText()"
     devicewidth="deviceWidth"
     deviceheight="deviceHeight"
-    dragleft="dragLeft()"
-    dragright="dragRight()"
-    swipeleft="swipeLeft()"
-    swiperight="swipeRight()"
-    center="center()">
+    draggedleft="draggedLeft()"
+    draggedright="draggedRight()"
+    swipedleft="swipedLeft()"
+    swipedright="swipedRight()"
+    centered="centered()">
     <!-- slide -->
     <gw-mob-slide>
       <!-- image -->
