feat(likedislike): programmatically trigger swipe on like/dislike icon click

--- a/src/app/modeb/textselect.part.html
+++ b/src/app/modeb/textselect.part.html
@@ -14,6 +14,8 @@
     getnextitem="getNextText()"
     devicewidth="deviceWidth"
     deviceheight="deviceHeight"
+    swipeleft="$parent.swipeLeft"
+    swiperight="$parent.swipeRight"
     draggedleft="draggedLeft()"
     draggedright="draggedRight()"
     swipedleft="swipedLeft()"
