feat(likedislike): change icons from smileys to heart/cross

--- a/src/app/modeb/textselect.part.html
+++ b/src/app/modeb/textselect.part.html
@@ -28,8 +28,8 @@
       <!-- like/dislike icons -->
       <div class="likeDislikeIconsContainer">
         <div class="likeDislikeIcons">
-          <div class="dislikeIcon icon ion-sad" ng-click="dislikeIconClick()"></div> 
-          <div class="likeIcon icon ion-happy" ng-click="likeIconClick()"></div> 
+          <div class="dislikeIcon icon ion-close-round" ng-click="dislikeIconClick()"></div> 
+          <div class="likeIcon icon ion-heart" ng-click="likeIconClick()"></div> 
         </div>
       </div>
       <!-- text -->
