--- a/src/app/modea/textselect.part.html
+++ b/src/app/modea/textselect.part.html
@@ -5,6 +5,8 @@
     getnextitem="getNextText(currentText)"
     getpreviousitem="getPreviousText(currentText)"
     currentitem="$parent.currentText"
+    swipeLeft="$parent.swipeLeft"
+    swipeRight="$parent.swipeRight"
     devicewidth="deviceWidth"
     deviceheight="deviceHeight">
     <!-- slide -->
@@ -25,7 +27,7 @@
         </gw-mob-sendbar>
       </div>
       <!-- like/dislike icons -->
-      <div class="likeDislikeIconsContainer">
+      <div class="likeDislikeIconsContainer" ng-show="item.TextId!==-1">
         <div class="likeDislikeIcons">
           <div class="dislikeIcon icon ion-ios7-close" ng-click="dislikeIconClick()"></div> 
           <div class="likeIcon icon" ng-class="{'ion-ios7-heart':item.liked, 'ion-ios7-heart-outline':!item.liked}" ng-click="likeIconClick(item)"></div> 
