--- a/src/app/settings/settings.part.html
+++ b/src/app/settings/settings.part.html
@@ -9,14 +9,9 @@
       <span class="input-label">mums email address</span>
       <input type="text" ng-model="settings.emailAddress">
     </label>
-    <div class="item item-toggle">
-      <span class="input-label">tinder mode</span>
-      <label class="toggle">
-        <input type="checkbox" ng-model="settings.tinderMode">
-          <div class="track">
-            <div class="handle"></div>
-          </div>
-      </label>
-    </div>
+    <label class="item item-input item-select">
+      <div class="input-label">mode</div>
+      <select ng-model="settings.mode" ng-options="mode as mode for mode in ['A','B','C']"></select>
+    </label>
   </div>
 </div>
