--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -1,3 +1,12 @@
+.textSelectModeC .text {
+  color: rgba(0,0,0,0.7); 
+  padding-top: 50px;  
+  padding-bottom: 40px;
+  padding-left: 50px;
+  padding-right: 50px;
+  text-align: center;
+  font-size: 1.05em;
+} 
 .textSelectModeC .sendBarContainer {
   width: 100%;
   padding-left: 50px;
