--- a/src/app/modec/textselect.css
+++ b/src/app/modec/textselect.css
@@ -7,6 +7,16 @@
   text-align: center;
   font-size: 1.05em;
 } 
+.textSelectModeC .image {
+  width: 100%;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+  background-repeat: no-repeat; 
+  background-position: center center;
+  background-attachment: fixed fixed; 
+}
 .textSelectModeC .sendBarContainer {
   width: 100%;
   padding-left: 50px;
