feat(modec): implement image selection

--- a/src/app/modec/textselect.part.html
+++ b/src/app/modec/textselect.part.html
@@ -10,7 +10,7 @@
     <!-- slide -->
     <gw-mob-slide>
       <!-- image -->
-      <div class="image" style="height:{{slideImageHeight}}px; background-image:url('{{item.url}}')"></div>
+      <div class="image" style="height:{{slideImageHeight}}px; background-image:url('{{item}}')"></div>
     </gw-mob-slide>
   </gw-mob-slideswipe>
   <!-- TEXT SLIDES -->
